# Dev_RisLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeSettings_beagle.json  CMakeSettings_linux.json  CMakeSettings_ubuntu.json  CMakeSettings_win.json  Dev_RisLib.sln  Dev_Serial.sln  Dev_VS_Ris.sln  Jenkinsfile  MyBeagleToolchain.cmake  MyCodeMacros.cmake  MyConfig.cmake  MyConfig_beagle.cmake  MyConfig_dart.cmake  MyGlobalImports.cmake  MyInstall.cmake  MyLocalImports.cmake  MyPostBuild.cmake  MyPrecompiledHeader.cmake  MySpecial.cmake  README.md  README.md.txt  build.sh  clean.bat  cleanAll.bat  cleanProject.bat  copyrislib.bat  environment-setup-armv8a-fsl-linux.txt  imx8mm-toolchain.cmake  mx93-toolchain.cmake  rpi-toolchain.cmake  set_for_beagle.bat  set_for_dart.bat  set_for_ubuntu.bat  set_for_win.bat
ByteContent/: ByteContent.vcxproj  ByteContent.vcxproj.filters  CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp
ByteContent/Source/: CmdLineExec.cpp
CmdLineTest1/: CMakeLists.txt  CmdLineTest1.vcxproj  CmdLineTest1.vcxproj.filters
CmdLineTest1/Source/: CmdLineExec.cpp  CmdLineExec.h  GSettings.cpp  GSettings.h  (+3 more)
Experiment/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  CmdLineExec_linux.cpp  CmdLineExec_win.cpp  Experiment.vcxproj  Experiment.vcxproj.filters  Main.cpp  MainInit.cpp  TestTable.h  risCmdLineTables22.h
FileFunctions/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  MySettings.cpp  MySettings.h  MySettings1.cpp  MySettings1.h  MySettings2.cpp  MySettings2.h
MyProgram1/: CMakeLists.txt  main.cpp  stdafx.h
NamedSemaphore/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  risNamedSemaphore.h  risNamedSemaphore_linux.cpp  risNamedSemaphore_win.cpp
PeriodicTest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  risThreadsDeadlineThread.cpp  risThreadsDeadlineThread.h  risThreadsDeadlineThread_linux.cpp  risThreadsEDFThread.h  risThreadsEDFThread_linux.cpp  risThreadsPeriodicThread.h  risThreadsPeriodicThread2.h  risThreadsPeriodicThread2_linux.cpp  risThreadsPeriodicThread_linux.cpp  someMonitorThread.cpp  somePeriodicTestThread.cpp  somePeriodicTestThread.h  someTimerTestThread.cpp  someTimerTestThread.h  someTimerTestThread1.cpp  someTimerTestThread1.h  someTimerTestThread2.cpp  someTimerTestThread2.h
PeriodicTest1/: CMakeLists.txt  MainInit.cpp  risThreadsPeriodicThread_linux.cpp  someMonitorThread.h  someTimerTestThread1.cpp
PeriodicTest2/: CMakeLists.txt  MainInit.cpp  risThreadsPeriodicThread.h  risThreadsPeriodicThread_linux.cpp  someMonitorThread.cpp  someTimerTestThread1.cpp  someTimerTestThread1.h
PrintTest/: CMakeLists.txt  CmdLineExec.cpp  MainInit.cpp  PrintTest.vcxproj  PrintTest.vcxproj.filters
PrintView/: CMakeLists.txt  Main.cpp  PrintView.vcxproj  PrintView.vcxproj.filters
ProtoMsg/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  ProtoMsg.vcxproj
ProtoSerial/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  ProtoSerial.vcxproj  procoMonitorThread.cpp  procoMonitorThread.h  procoProcThread.cpp  procoProcThread.h  procoSerialThread.cpp  procoSerialThread.h  risMonitor.h  risSerialMsgPort.cpp  risSerialMsgPort.h  risSerialMsgThread.cpp  risSerialMsgThread.h  risSerialMsgThread2.cpp  risSerialMsgThread2.h
ProtoString/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  procoNetworkThread.cpp  procoSerialThread.cpp  risNetUdpStringThread.cpp  risNetUdpStringThread.h
ProtoTcpClient/: CMakeLists.txt  Main.cpp  MainInit.cpp  ProtoTcpClient.vcxproj  procoClientThread.cpp
ProtoTcpServer/: CMakeLists.txt  Main.cpp  MainInit.cpp  ProtoTcpServer.vcxproj  procoServerThread.cpp
ProtoUdp/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  ProtoUdp.vcxproj  ProtoUdp.vcxproj.filters  procoNetworkThread.cpp
QCallTest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  QCallTestBed.cpp  QCallTestBed.h  QCallTestTarget.cpp  QCallTestTarget.h
RandomTest/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  risThreadsRandomThread.h  risThreadsRandomThread_linux.cpp  someRandomTestThread.cpp  someRandomTestThread.h  someTimerTestThread1.cpp  someTimerTestThread1.h
ReadLine/: CMakeLists.txt  Main.cpp  stdafx.h
RisLib/: CMakeLists.txt  RisLib.vcxproj  RisLib.vcxproj.filters  RisLibConfig.cmake  json.h  jsoncpp.cpp  logFiles.cpp  logFiles.h  my_functions.cpp  my_functions.h  prnPrint.h  prnPrintFilterTable.cpp  prnPrintFilterTable.h  prnPrintFilters.h  prnPrintGlobal.cpp  prnPrintGlobal.h  prnPrintSettings.cpp  prnPrintSettings.h  prnPrint_linux.cpp  prnPrint_win.cpp  risAbortableSleep.cpp  risAbortableSleep.h  risAlphaDir.h  risAlphaDir_linux.cpp  risAlphaDir_win.cpp  risBaseDir.cpp  risBaseDir.h  risBitUtils.h  risByteBlob.h  risByteBuffer.cpp  risByteBuffer.h  risByteContent.h  risByteMsgMonkey.cpp  risByteMsgMonkey.h  risCmdLineCmd.cpp  risCmdLineCmd.h  risCmdLineConsole.cpp  risCmdLineConsole.h  risCmdLineExec.cpp  risCmdLineExec.h  (+162 more)
SerialComm/: CMakeLists.txt  CmdLineExec.cpp  SerialComm.vcxproj  SerialComm.vcxproj.filters  someSerialRxThread.cpp  someSerialRxThread.h
SerialPort/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  SerialPort.vcxproj  SerialPort.vcxproj.filters  someSerialPortThread.cpp  someSerialPortThread.h
SerialTest1/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp
SerialTest2/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  SerialThread.cpp  SerialThread.h  risSerialPort2.h  risSerialPort2_linux.cpp  risSerialPort2_win.cpp  someSerialThread.cpp  someSerialThread.h
SerialTest4/: CMakeLists.txt  MainInit.cpp
SharedMemory/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  risSharedMemory.cpp  risSharedMemory.h  risSharedMemory_linux.cpp  risSharedMemory_win.cpp  smShare.cpp  smShare.h
Strtok/: CMakeLists.txt  CmdLineExec.cpp  MainInit.cpp  Strtok1.cpp  Strtok1.h
Test/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  Test.vcxproj  Test.vcxproj.filters  pxModel.cpp  pxModel.h
(+1201 files in other folders)
